2006-06-30  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_namespace/Makefile.am(EXTRA_DIST): Add namespace.init.

2006-06-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/Makefile.am (releasedocs): Fix directory layout.
	* doc/adg/Makefile.am: Likewise.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.

2006-06-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/sag: System Administrator Guide as XML source.
	* doc/sag/Makefile.am: New.
	* doc/sag/Linux-PAM_SAG.xml: New, main XML document.
	* doc/sag/pam_*.xml: New, wrapper to include module documentation.

	* doc/adg: Application Developers Guide as XML source.
	* doc/adg/Makefile.am: New.
	* doc/adg/Linux-PAM_ADG.xml: New, main XML document.
	* doc/adg/pam_*.xml: New, wrappers to include manual pages.

	* doc/mwg: Application Developers Guide as XML source.
	* doc/mwg/Makefile.am: New.
	* doc/mwg/Linux-PAM_MWG.xml: New, main XML document.
	* doc/mwg/pam_*.xml: New, wrappers to include manual pages.

	* doc/CREDITS: Removed.
	* doc/NOTES: Removed.
	* doc/pam_appl.sgml: Removed.
	* doc/pam_modules.sgml: Removed.
	* doc/pam_source.sgml: Removed.
	* doc/figs/pam_orient.txt: Removed.
	* doc/figs: Removed.

	* configure.in: Remove checks for sgml2* progrs, add sag, adg
	and mwg Makefiles.

	* doc/Makefile.am: Remove references to sgml, add sag, adg and mwg
	directories.
	* doc/modules: Remove directory.
	* doc/html: Remove directory.
	* doc/ps: Remove directory.
	* doc/pdf: Remove directory.
	* doc/txts: Remove directory.
	* doc/index.html: Moved from html directory to here.

2006-06-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.5.0

	* bump version number to 0.99.5.0

	* modules/pam_rhosts/pam_rhosts.c: New module, replaces
	pam_rhosts_auth.so.
	* modules/pam_rhosts/pam_rhosts.8.xml: New.
	* modules/pam_rhosts/pam_rhosts.8: New, generated from XML source.
	* modules/pam_rhosts/tst-pam_rhosts: New.
	* modules/pam_rhosts/Makefile.am: Add pam_rhosts, generate
	manual page and README.